# AoC

./: .gitignore  README.md  day_1.go  day_10.go  day_11.go  day_13.go  day_14.go  day_16.go  day_2.go  day_3.go  day_4.go  day_5.go  day_6.go  day_7.go  day_8.go  go.mod  go.sum  main.go  tmpl.go
2019/: Intcode.cs  Program.cs  Utils.cs  intcode_computer.py  pyproject.toml
2019/days/: Day1.py  Day10.py  Day2.py  Day3.py  Day4.py  Day5.py  Day6.py  Day8.py  d1.cs  d2.cs  d4.cs
2020/: day_3.go  day_6.go  day_8.go  day_9.go  go.mod
2020/Go/: day_12.go  day_15.go  day_7.go
2020/Go/data/: 15.txt
2020/Python/: pyproject.toml
2021/: Gemfile  d1.rb  runner.rb
2021/Python/: pyproject.toml  runner.py
2021/Ruby/: Gemfile
2021/Ruby/days/: d1.rb  (+3 more)
2021/days/: d1.rb  d3.rb  d4.rb  d5.rb  d6.rb  d9.rb
2021/part2/: Pipfile  runner.py  utils.py
2022/: pyproject.toml  utils.py
2022/days/: Day1.py  Day10.py  Day11.py  Day12.py  Day13.py  Day14.py  Day2.py  Day3.py  Day4.py  Day5.py  Day6.py  Day7.py  Day8.py  Day9.py
2023/: Cargo.toml  justfile  tmpl.rs
2023/aoc_macros/: Cargo.toml
2023/aoc_macros/src/: lib.rs
2023/benches/: aoc_bench.rs  macros.rs
2023/src/: d1.rs  d10.rs  d11.rs  d12.rs  d2.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs  lib.rs  macros.rs  main.rs
2024/: .gitignore
2024/src/: Day01.kt  Day02.kt  Day03.kt  Day04.kt  Day05.kt  Day06.kt  Day07.kt  Day08.kt  Day09.kt  Day11.kt  Day4.kt  Utils.kt
2025/: .gitignore  README.md  d1.ts  d10.ts  d11.ts  d12.ts  d2.ts  d3.ts  d4.ts  d5.ts  d6.ts  d7.ts  d8.ts  d9.ts  package.json  utils.ts
(+17 files in other folders)
