[tool.poetry]
name = "aoc-2022"
version = "0.1.0"
description = ""
authors = ["Treelar <t.rothled@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.0"
Pillow = ">9.1.1"
tqdm = "^4.64.0"
more-itertools = "^9.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
