[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["aoc_macros"]

[dependencies]
anyhow = "1.0.75"
aoc_macros = { path = "./aoc_macros" }
clap = { version = "4.4.10", features = ["derive"] }
itertools = "0.12.0"
lazy_static = "1.4.0"
ndarray = "0.15.6"
nom = "7.1.3"
num = "0.4.1"
pathfinding = "4.4.0"
petgraph = "0.6.4"
polars = "0.35.4"
rayon = "1.8.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
casey = "0.4.0"
criterion = "0.5.1"

[[bench]]
name = "aoc_bench"
harness = false
